# pymc-supply-chain

./: .gitignore  CLAUDE.md  COMPREHENSIVE_MODEL_TEST_RESULTS.md  COMPREHENSIVE_TESTING_RESULTS.md  CRITICAL_ARCHITECTURAL_FIXES_SUMMARY.md  DEMAND_FORECASTING_FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PYMC_FIXES_SUMMARY.md  README.md  STATISTICAL_VALIDATION_REPORT.md  comprehensive_demand_model_tests.py  debug_models.py  demand_model_fixes.py  display_model_results.py  fixed_techmart_examples.py  model_usage_examples.py  pyproject.toml  repomix-output.xml  simplified_validation_results.json  statistical_validation_results.json  test_and_plot_all_models.py  test_architectural_fixes.py  test_case_study_models.py  test_fixed_demand_models.py  test_fixed_models.py  test_implementation.py  test_statistical_validation.py  test_statistical_validation_simple.py  validate_syntax.py
examples/: forecast_inventory_integration.py  quickstart.py  techmart_case_study.py
pymc_supply_chain/: __init__.py  base.py  version.py
pymc_supply_chain/demand/: __init__.py  base.py  hierarchical.py  intermittent.py  seasonal.py
pymc_supply_chain/inventory/: __init__.py  eoq.py  multi_echelon.py  newsvendor.py  safety_stock.py
pymc_supply_chain/network/: __init__.py  facility_location.py  flow_optimization.py  network_design.py
pymc_supply_chain/risk/: __init__.py
pymc_supply_chain/transportation/: __init__.py
